--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="island-core">
                 <div class="logo-capsule">
                     <div class="logo-orbital">
-                        <img src="/1749844949016.png" alt="Phoenix Rovers" class="logo-avatar">
+                        <img src="1749844949016.png" alt="Phoenix Rovers" class="logo-avatar">
                         <div class="orbital-ring"></div>
                         <div class="orbital-ring orbital-ring-2"></div>
                     </div>
